--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -122,6 +122,9 @@ h1{
 .container{
 	padding-top:100px;
 }
+.container.fixed{
+	margin-left: 330px !important;
+}
 
 .btn-mp{
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,.14),0 3px 1px -2px rgba(0,0,0,.2),0 1px 5px 0 rgba(0,0,0,.12);
