--- a/login/login.css
+++ b/login/login.css
@@ -13,7 +13,22 @@ html, body{
 	color: var(--dark-color);
 }
 
+.login-title{
+	font-weight: 400;
+	color: black;
+	/*background-color: #ffeb3b;*/
+	padding: 15px 12px;
+	text-transform: uppercase;
+	font-size: 22px;
+	letter-spacing: 1px;
+}
 
+.icon{
+	position: absolute;
+	top: 15px;
+	right: 15px;
+	width: 32px;
+}
 
 p{
 	font-size: 1.2em;
