--- a/background/css/sidebar.css
+++ b/background/css/sidebar.css
@@ -9,7 +9,7 @@ Martin Prinz 14.06.2017*/
 }
 
 #sidebar{
-	/*background-color:green;*/
+	background-color: #fafafa;
 	height: 100%;
 	width: 310px;
 	max-width: 310px;
