--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -11,7 +11,7 @@ html, body {
 	padding: 0;
 	/*padding-top: 70px;*/
 	background-color: #fafafa;
-	height: 100%;
+	height: 1<00%;
 }
 
 #webexID{
@@ -24,6 +24,15 @@ html, body {
 #burger{
 	position: absolute;
 	color: #212121;
+}
+#updateUrl{
+	font-size: 1em;
+	/*padding: 0;*/
+}
+#updateUsername{
+	font-size: 1em;
+	/*padding: 0;*/
+
 }
 #burger i{
 	font-size: 28px;
@@ -90,6 +99,9 @@ a, a:hover{
 .entry-actions{
 	display: none;
 	transition: all 0.5s cubic-bezier(.25,.8,.25,1);
+}
+.form-group.edit{
+	margin:0;
 }
 
 h4{
@@ -233,10 +245,36 @@ h1{
 
 }
 
+.updateConfirm{
+	border-radius: 100%;
+	margin: 0;
+}
+.updateCancel{
+	border-radius: 100%;
+	margin: 0;
+	margin-left:-19px;
+}
+.updateCancel .material-icons{
+	font-size: 2em;
+	color: var(--dark-color);
+}
+.updateConfirm .material-icons{
+	font-size: 2em;
+	color: var(--highlight-color);
+}
+
 .entry-row{
 	line-height: 40px;
 	display:none;
+	padding: 10px 15px 5px 10px;
 }
+
+.entry-row.entry-focused{
+	box-shadow: 0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12);
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	background-color: white;
+}
+
 .entry-row:not(:first-of-type){
 	margin-top: 20px;
 }
@@ -268,7 +306,7 @@ h1{
 }
 
 #section-about li{
-		font-size: 18px;
+	font-size: 18px;
 	font-weight: 300;
 }
 
