--- a/content_scripts/inject.css
+++ b/content_scripts/inject.css
@@ -44,6 +44,7 @@
 }
 */
 .hintbox{
+	flex-direction:unset !important;
 	display:none;
 	border: none;
 	transition: all 0.5s cubic-bezier(.25,.8,.25,1);
@@ -64,6 +65,7 @@
 .hintbox_head.focused{
 	
 }
+
 #hbpwrms .hintbox_content{
 	padding: 0 !important;
 	overflow-y: scroll !important;
