--- a/background/css/mp.css
+++ b/background/css/mp.css
@@ -64,6 +64,15 @@ a, a:hover{
 	display:none;
 }
 
+.progress.mp-strength{
+	width: 200px;
+	display: inline-flex;
+	vertical-align: -moz-middle-with-baseline;
+	margin-left: 20px;
+	margin-top: 10px;
+	border-radius: 35px !important;
+}
+
 .search-result-header{
 	color: #595959;
 	font-weight: 300;
@@ -365,7 +374,7 @@ h1{
 	margin-top: 5px !important;
 }
 h2.row-header{
-	margin-bottom: 10px;
+	margin-bottom: 35px;
 }
 
 .entry-icons{
@@ -479,6 +488,9 @@ h2.row-header{
 	min-width: 160px;
 	display: inline-block;
 	padding-left: 10px;
+	letter-spacing: 3px;
+	font-weight: 800;
+	vertical-align: middle;
 }
 
 .modal-body{
